noinst_LTLIBRARIES = \
    libanalyzers.la

METASOURCES = \
    AUTO

INCLUDES = \
    -I$(top_builddir)/pana/src/panacore \
    -I$(top_builddir)/pana/src \
    -I$(top_srcdir)/pana/src/panacore \
    -I$(top_srcdir)/pana/src/engine \
    -I$(top_srcdir)/pana/src/plugin \
    -I$(top_srcdir)/pana/src \
    $(all_includes)

libanalyzers_la_SOURCES = \
    analyzerbase.cpp \
    analyzerfactory.cpp \
    baranalyzer.cpp \
    blockanalyzer.cpp \
    glanalyzer.cpp \
    glanalyzer2.cpp \
    glanalyzer3.cpp \
    sonogram.cpp \
    turbine.cpp \
    boomanalyzer.cpp



    
